@@ -44,49 +44,49 @@ class CommunicationManagerTest extends EntityFactory {
         comm2.setId(102);
 
         // Behavior for user types
-        when(userManager.getUserType(10)).thenReturn(UserType.STUDENT);
-        when(userManager.getUserType(11)).thenReturn(UserType.STUDENT);
-        when(userManager.getUserType(20)).thenReturn(UserType.COMPANY);
-        when(userManager.getUserType(1)).thenReturn(UserType.UNIVERSITY);
-        when(userManager.getUserType(999)).thenReturn(UserType.UNKNOWN);
+        when(userManager.getUserType("10")).thenReturn(UserType.STUDENT);
+        when(userManager.getUserType("11")).thenReturn(UserType.STUDENT);
+        when(userManager.getUserType("20")).thenReturn(UserType.COMPANY);
+        when(userManager.getUserType("1")).thenReturn(UserType.UNIVERSITY);
+        when(userManager.getUserType("999")).thenReturn(UserType.UNKNOWN);
 
         // Behavior for communications
-        when(communicationRepository.findCommunicationByStudent_Id(10)).thenReturn(List.of(comm1));
-        when(communicationRepository.findCommunicationByStudent_Id(11)).thenReturn(List.of(comm2));
-        when(communicationRepository.findCommunicationByCompany_Id(20)).thenReturn(List.of(comm1, comm2));
-        when(communicationRepository.findCommunicationByUniversity_Id(1)).thenReturn(List.of(comm1, comm2));
+        when(communicationRepository.findCommunicationByStudent_Id("10")).thenReturn(List.of(comm1));
+        when(communicationRepository.findCommunicationByStudent_Id("11")).thenReturn(List.of(comm2));
+        when(communicationRepository.findCommunicationByCompany_Id("20")).thenReturn(List.of(comm1, comm2));
+        when(communicationRepository.findCommunicationByUniversity_Id("1")).thenReturn(List.of(comm1, comm2));
 
         // 1) Student s1
-        List<Communication> result = communicationManager.getAllUserCommunications(10);
+        List<Communication> result = communicationManager.getAllUserCommunications("10");
         assertNotNull(result);
         assertEquals(1, result.size());
-        assertEquals(101, result.get(0).getId());
+        assertEquals(101, result.getFirst().getId());
 
         // 2) Student s2
-        result = communicationManager.getAllUserCommunications(11);
+        result = communicationManager.getAllUserCommunications("11");
         assertEquals(1, result.size());
-        assertEquals(102, result.get(0).getId());
+        assertEquals(102, result.getFirst().getId());
 
         // 3) Company c1
-        result = communicationManager.getAllUserCommunications(20);
+        result = communicationManager.getAllUserCommunications("20");
         assertEquals(2, result.size());
 
         // 4) University
-        result = communicationManager.getAllUserCommunications(1);
+        result = communicationManager.getAllUserCommunications("1");
         assertEquals(2, result.size());
 
         // 5) Unknown => NotFoundException
-        assertThrows(NotFoundException.class, () -> communicationManager.getAllUserCommunications(999));
+        assertThrows(NotFoundException.class, () -> communicationManager.getAllUserCommunications("999"));
 
         // 6) NoContentException scenario
-        when(communicationRepository.findCommunicationByStudent_Id(11)).thenReturn(Collections.emptyList());
-        assertThrows(NoContentException.class, () -> communicationManager.getAllUserCommunications(11));
+        when(communicationRepository.findCommunicationByStudent_Id("11")).thenReturn(Collections.emptyList());
+        assertThrows(NoContentException.class, () -> communicationManager.getAllUserCommunications("11"));
 
         // Verify calls
-        verify(communicationRepository).findCommunicationByStudent_Id(10);
-        verify(communicationRepository, times(2)).findCommunicationByStudent_Id(11);
-        verify(communicationRepository).findCommunicationByCompany_Id(20);
-        verify(communicationRepository).findCommunicationByUniversity_Id(1);
+        verify(communicationRepository).findCommunicationByStudent_Id("10");
+        verify(communicationRepository, times(2)).findCommunicationByStudent_Id("11");
+        verify(communicationRepository).findCommunicationByCompany_Id("20");
+        verify(communicationRepository).findCommunicationByUniversity_Id("1");
     }
 
     @Test
@@ -97,13 +97,13 @@ class CommunicationManagerTest extends EntityFactory {
         Company company = setNewCompany(20, "Google", "US");
         InternshipOffer offer = setNewInternshipOffer(company);
 
-        when(userManager.getStudentById(10)).thenReturn(student);
-        when(userManager.getUniversityById(1)).thenReturn(uni);
+        when(userManager.getStudentById("10")).thenReturn(student);
+        when(userManager.getUniversityById("1")).thenReturn(uni);
         when(userManager.getInternshipOfferById(30)).thenReturn(offer);
 
         Map<String, Object> validPayload = new HashMap<>();
-        validPayload.put("student_id", 10);
-        validPayload.put("university_id", 1);
+        validPayload.put("student_id", "10");
+        validPayload.put("university_id", "1");
         validPayload.put("internshipOffer_id", 30);
         validPayload.put("title", "Test");
         validPayload.put("content", "Test content");
@@ -146,17 +146,17 @@ class CommunicationManagerTest extends EntityFactory {
         when(communicationRepository.getCommunicationById(100)).thenReturn(comm);
 
         // Authorized
-        when(userManager.getUserType(10)).thenReturn(UserType.STUDENT);
-        Communication fetched = communicationManager.getCommunication(100, 10);
+        when(userManager.getUserType("10")).thenReturn(UserType.STUDENT);
+        Communication fetched = communicationManager.getCommunication(100, "10");
         assertEquals(100, fetched.getId());
 
         // NotFound
         when(communicationRepository.getCommunicationById(999)).thenReturn(null);
-        assertThrows(NotFoundException.class, () -> communicationManager.getCommunication(999, 10));
+        assertThrows(NotFoundException.class, () -> communicationManager.getCommunication(999, "10"));
 
         // Unauthorized
-        when(userManager.getUserType(99)).thenReturn(UserType.STUDENT);
-        assertThrows(UnauthorizedException.class, () -> communicationManager.getCommunication(100, 99));
+        when(userManager.getUserType("99")).thenReturn(UserType.STUDENT);
+        assertThrows(UnauthorizedException.class, () -> communicationManager.getCommunication(100, "99"));
     }
 
     @Test
@@ -166,11 +166,11 @@ class CommunicationManagerTest extends EntityFactory {
         Communication comm = setNewCommunication(student, setNewInternshipOffer(setNewCompany(20, "Google", "US")));
         comm.setId(200);
 
-        when(userManager.getUniversityById(1)).thenReturn(uni);
+        when(userManager.getUniversityById("1")).thenReturn(uni);
         when(communicationRepository.findById(200)).thenReturn(Optional.of(comm));
         when(communicationRepository.save(comm)).thenReturn(comm);
 
-        Map<String, Object> validPayload = Map.of("university_id", 1);
+        Map<String, Object> validPayload = Map.of("university_id", "1");
 
         // Success
         Communication result = communicationManager.terminateCommunication(200, validPayload);
@@ -189,8 +189,8 @@ class CommunicationManagerTest extends EntityFactory {
 
         // Unauthorized
         University otherUni = setNewUniversity(2, "WrongUni", "US");
-        when(userManager.getUniversityById(2)).thenReturn(otherUni);
-        Map<String, Object> unauthorizedPayload = Map.of("university_id", 2);
+        when(userManager.getUniversityById("2")).thenReturn(otherUni);
+        Map<String, Object> unauthorizedPayload = Map.of("university_id", "2");
         assertThrows(UnauthorizedException.class, () -> communicationManager.terminateCommunication(200, unauthorizedPayload));
     }
 }
